# bba

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.5A0BC84926D30845.idx
src/: main.cpp  stream.cpp
